; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/string/extr_wcstombs_nt.c_wcstombs.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/string/extr_wcstombs_nt.c_wcstombs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @wcstombs(i8* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i64 @wcslen(i32* %11)
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %10, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %28

16:                                               ; preds = %3
  %17 = load i32*, i32** %6, align 8
  %18 = ptrtoint i32* %17 to i64
  %19 = inttoptr i64 %18 to i32*
  %20 = load i32, i32* %10, align 4
  %21 = sext i32 %20 to i64
  %22 = mul i64 %21, 4
  %23 = trunc i64 %22 to i32
  %24 = call i32 @RtlUnicodeToMultiByteSize(i32* %9, i32* %19, i32 %23)
  %25 = load i32, i32* %9, align 4
  %26 = sext i32 %25 to i64
  %27 = udiv i64 %26, 1
  store i64 %27, i64* %4, align 8
  br label %48

28:                                               ; preds = %3
  %29 = load i8*, i8** %5, align 8
  %30 = load i64, i64* %7, align 8
  %31 = trunc i64 %30 to i32
  %32 = load i32*, i32** %6, align 8
  %33 = ptrtoint i32* %32 to i64
  %34 = inttoptr i64 %33 to i32*
  %35 = load i32, i32* %10, align 4
  %36 = sext i32 %35 to i64
  %37 = mul i64 %36, 4
  %38 = trunc i64 %37 to i32
  %39 = call i32 @RtlUnicodeToMultiByteN(i8* %29, i32 %31, i32* %9, i32* %34, i32 %38)
  store i32 %39, i32* %8, align 4
  %40 = load i32, i32* %8, align 4
  %41 = call i32 @NT_SUCCESS(i32 %40)
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %44, label %43

43:                                               ; preds = %28
  store i64 -1, i64* %4, align 8
  br label %48

44:                                               ; preds = %28
  %45 = load i32, i32* %9, align 4
  %46 = sext i32 %45 to i64
  %47 = udiv i64 %46, 1
  store i64 %47, i64* %4, align 8
  br label %48

48:                                               ; preds = %44, %43, %16
  %49 = load i64, i64* %4, align 8
  ret i64 %49
}

declare dso_local i64 @wcslen(i32*) #1

declare dso_local i32 @RtlUnicodeToMultiByteSize(i32*, i32*, i32) #1

declare dso_local i32 @RtlUnicodeToMultiByteN(i8*, i32, i32*, i32*, i32) #1

declare dso_local i32 @NT_SUCCESS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
